--- a/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_retrieve_update_destroy.html
+++ b/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_retrieve_update_destroy.html
@@ -75,8 +75,40 @@
 <script>
 
   $(document).ready(function () {
+    setCSRFToken();
     getMenuDetailForUrl();
   });
+
+
+  // -------
+  //  Utils
+  // -------
+
+  function getCookie(name) {
+    let cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+      const cookies = document.cookie.split(';');
+      for (let i = 0; i < cookies.length; i++) {
+        const cookie = cookies[i].trim();
+        // Does this cookie string begin with the name we want?
+        if (cookie.substring(0, name.length + 1) === (name + '=')) {
+          cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+          break;
+        }
+      }
+    }
+    return cookieValue;
+  }
+
+  function setCSRFToken() {
+    const csrf_token = getCookie('csrftoken');
+    $.ajaxSetup({
+      headers: {
+        'X-CSRFToken': csrf_token,
+        'Content-Type': 'application/json'
+      }
+    });
+  }
 
   // ----
   //  UI
